--- a/package.json
+++ b/package.json
@@ -15,14 +15,14 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
-    "@nivo/pie": "^0.99.0",
     "@reduxjs/toolkit": "^2.6.1",
+    "chart.js": "^4.5.0",
     "jsoneditor": "^10.2.0",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.5.0",
-    "recharts": "^3.1.0",
     "redux": "^5.0.1"
   },
   "devDependencies": {
